fix arrow on ios

--- a/viaggia-mobile/www/css/style.css
+++ b/viaggia-mobile/www/css/style.css
@@ -958,6 +958,7 @@ position: absolute;
 left: -33px;
 /*top: 3.7px;*/
 width: 0px;
+  margin-top: 10px;
 }
 .timeline-col{
 color: white;
